--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,11 @@ on: [push]
 
 name: Linux_Container_Node_Workflow
 
+env:
+    IMAGE_NAME: 'flask-demo'
+    IMAGE_VERSION: 'latest'
+    CONTAINER_REGISTRY: 'maudhelencontaineregistry.azurecr.io'
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -22,10 +27,10 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
     - run: |
-        docker build . -t contoso.azurecr.io/nodejssampleapp:${{ github.sha }}
-        docker push contoso.azurecr.io/nodejssampleapp:${{ github.sha }} 
+        docker build . -t ${{env.CONTAINER_REGISTRY}}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+        docker push ${{env.CONTAINER_REGISTRY}}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
     - uses: azure/webapps-deploy@v2
       with:
         app-name: 'node-rnc'
-        images: 'contoso.azurecr.io/nodejssampleapp:${{ github.sha }}'
+        images: '${{env.CONTAINER_REGISTRY}}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}'
