--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,7 @@ env:
     IMAGE_NAME: 'flask-demo'
     IMAGE_VERSION: 'latest'
     CONTAINER_REGISTRY: 'maudhelencontaineregistry'
+    WEB_APP_NAME: 'maudhelen-appservice'
 
 jobs:
   build-and-deploy:
@@ -32,5 +33,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'node-rnc'
+        app-name: ${{ env.WEB_APP_NAME }}
         images: '${{env.CONTAINER_REGISTRY}}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}'
