--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,9 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+        run:
+            working-directory: ./app
     steps:
     # checkout the repo
     - name: 'Checkout Github Action'
@@ -29,7 +32,9 @@ jobs:
 
     - run: |
         docker build . -t ${{env.CONTAINER_REGISTRY}}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+        docker build . -t ${{ env.CONTAINER_REGISTRY }}.azurecr.io/${{env.IMAGE_NAME}}:${{ github.ref_name }}-latest
         docker push ${{env.CONTAINER_REGISTRY}}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+        docker push ${{ env.CONTAINER_REGISTRY }}.azurecr.io/${{env.IMAGE_NAME}}:${{ github.ref_name }}-latest
 
     - uses: azure/webapps-deploy@v2
       with:
