--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
         run:
-            working-directory: app
+            working-directory: ./devops-ex3
     steps:
     # checkout the repo
     - name: 'Checkout Github Action'
