--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,39 +1,46 @@
-on: [push, workflow_dispatch]
-
-name: Linux_Container_Node_Workflow
+name: Deploy to Azure
 
 env:
-    IMAGE_NAME: 'flask-demo'
-    IMAGE_VERSION: 'latest'
     CONTAINER_REGISTRY: 'maudhelencontaineregistry'
     WEB_APP_NAME: 'maudhelen-appservice'
+    CONTAINER_LOGIN_SERVER_URL: 'maudhelencontaineregistry.azurecr.io'
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-    # checkout the repo
-    - name: 'Checkout Github Action'
-      uses: actions/checkout@main
 
-    - name: 'Login via Azure CLI'
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Login to Azure
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - uses: azure/docker-login@v1
+    - name: Login to Azure Container Registry
+      uses: azure/docker-login@v1
       with:
-        login-server: ${{env.CONTAINER_REGISTRY}}.azurecr.io
+        login-server: ${{ env.CONTAINER_LOGIN_SERVER_URL }}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
-    - run: |
-        docker build . -t ${{env.CONTAINER_REGISTRY}}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
-        docker build . -t ${{ env.CONTAINER_REGISTRY }}.azurecr.io/${{env.IMAGE_NAME}}:${{ github.ref_name }}-latest
-        docker push ${{env.CONTAINER_REGISTRY}}.azurecr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
-        docker push ${{ env.CONTAINER_REGISTRY }}.azurecr.io/${{env.IMAGE_NAME}}:${{ github.ref_name }}-latest
+    - name: Set image version
+      id: image-version
+      run: echo "::set-output name=version::$(date +'%Y.%m.%d.%H.%M')"
 
-    - uses: azure/webapps-deploy@v2
+    - name: Build and push image
+      run: |
+        docker build . -t ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.CONTAINER_LOGIN_SERVER_URL}}.azurecr.io/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
+        docker push ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.CONTAINER_LOGIN_SERVER_URL}}.azurecr.io/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v3
       with:
-        app-name: ${{ env.WEB_APP_NAME }}
-        images: '${{env.CONTAINER_REGISTRY}}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}'
+        app-name: ${{ env.WEB_APP_NAME }}}
+        images: '${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.CONTAINER_LOGIN_SERVER_URL}}.azurecr.io/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}'
