only 1 container link

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,11 +33,11 @@ jobs:
 
     - name: Build and push image
       run: |
-        docker build . -t ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
-        docker push ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
+        docker build . -t ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
+        docker push ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.WEB_APP_NAME }}
-        images: '${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.CONTAINER_LOGIN_SERVER_URL}}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}'
+        images: '${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}'
