--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,9 @@
 name: Deploy to Azure
 
-env:
-    CONTAINER_REGISTRY: 'maudhelencontaineregistry'
-    WEB_APP_NAME: 'maudhelen-appservice'
-    CONTAINER_LOGIN_SERVER_URL: 'maudhelencontaineregistry.azurecr.io'
-
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -23,9 +21,9 @@ jobs:
     - name: Login to Azure Container Registry
       uses: azure/docker-login@v1
       with:
-        login-server: ${{ env.CONTAINER_LOGIN_SERVER_URL }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        login-server: ${{ secrets.DOCKER_REGISTRY_SERVER_URL }}
+        username: ${{ secrets.DOCKER_REGISTRY_SERVER_USERNAME }}
+        password: ${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
 
     - name: Set image version
       id: image-version
@@ -33,11 +31,11 @@ jobs:
 
     - name: Build and push image
       run: |
-        docker build . -t ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
-        docker push ${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}
+        docker build . -t ${{ secrets.DOCKER_REGISTRY_SERVER_URL }}/${{secrets.CONTAINER_REGISTRY_IMAGE_NAME}}:${{ steps.image-version.outputs.version }}
+        docker push ${{ secrets.DOCKER_REGISTRY_SERVER_URL }}/${{secrets.CONTAINER_REGISTRY_IMAGE_NAME}}:${{ steps.image-version.outputs.version }}
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
       with:
-        app-name: ${{ env.WEB_APP_NAME }}
-        images: '${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{ env.CONTAINER_LOGIN_SERVER_URL }}/${{env.WEB_APP_NAME}}:${{ steps.image-version.outputs.version }}'
+        app-name: mdrummondWebApp
+        images: '${{ secrets.DOCKER_REGISTRY_SERVER_URL }}/${{secrets.CONTAINER_REGISTRY_IMAGE_NAME}}:${{ steps.image-version.outputs.version }}'
