--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -1,6 +1,5 @@
-on: [push, workflow_dispatch]
-
 name: Deploy App to containerized web app
+on: [push, workflow_dispatch]
 
 jobs:
   build-and-deploy:
@@ -21,16 +20,14 @@ jobs:
         username: ${{ secrets.DOCKER_REGISTRY_SERVER_USERNAME }}
         password: ${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
     
-    - name: Set output
+    - name: Set image version
       id: image-version
-      run: echo "version=$(date +'%Y.%m.%d.%H.%M')" >> $GITHUB_ENV
+      run: echo "::set-output name=version::$(date +'%Y.%m.%d.%H.%M')"
     
     - name: 'Build and push image'
       run: |
         docker build . -t ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{vars.IMAGE_BASE_NAME}}:${{ steps.image-version.outputs.version }}
-        docker build . -t ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{vars.IMAGE_BASE_NAME}}:${{ github.ref_name }}-latest
         docker push ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{vars.IMAGE_BASE_NAME}}:${{ steps.image-version.outputs.version }}
-        docker push ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{vars.IMAGE_BASE_NAME}}:${{ github.ref_name }}-latest
 
     - uses: azure/webapps-deploy@v2
       with:
