--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -31,5 +31,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'maudhelenApp'
+        app-name: ${{ vars.WEB_APP_NAME }}
         images: '${{vars.DOCKER_REGISTRY_SERVER_URL}}/${{vars.WEB_APP_NAME}}:${{ github.sha }}'
