--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -37,4 +37,6 @@ jobs:
     - uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ vars.WEB_APP_NAME }}
-        images: '${{vars.DOCKER_REGISTRY_SERVER_URL}}/${{env.IMAGE_NAME}}:${{ steps.image-version.outputs.version }}'
+        images: '${{vars.DOCKER_REGISTRY_SERVER_URL}}/${{env.IMAGE_NAME}}:latest'
+
+        
