--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -6,7 +6,6 @@ env:
     KEY_VAULT_SECRET_NAME_ACR_USERNAME: 'acr-username'
     KEY_VAULT_SECRET_NAME_ACR_PASSWORD: 'acr-password1'
     KEY_VAULT_NAME: 'maudhelen-keyvault'
-    REGISTRY_LOGIN_SERVER: 'maudhelencontaineregistry.azurecr.io'
 
 jobs:
   build-and-deploy:
@@ -31,7 +30,7 @@ jobs:
     - name: "Login Docker Registry"
       uses: azure/docker-login@v1
       with:
-        login-server: ${{ env.REGISTRY_LOGIN_SERVER }}
+        login-server: '${{ env.REGISTRY_USERNAME }}.azure.cr.io'
         username: ${{ env.REGISTRY_USERNAME }}
         password: ${{ env.REGISTRY_PASSWORD }}
     
