--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -6,6 +6,7 @@ env:
     KEY_VAULT_SECRET_NAME_ACR_USERNAME: 'acr-username'
     KEY_VAULT_SECRET_NAME_ACR_PASSWORD: 'acr-password1'
     KEY_VAULT_NAME: 'maudhelen-keyvault'
+    WEB_APP_NAME: 'maudhelen-appservice'
 
 jobs:
   build-and-deploy:
@@ -47,8 +48,8 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ vars.WEB_APP_NAME }}
-        images: '${{vars.DOCKER_REGISTRY_SERVER_URL}}/${{env.IMAGE_NAME}}:latest'
+        app-name: ${{ env.WEB_APP_NAME }}
+        images: '${{ env.REGISTRY_USERNAME }}.azure.cr.io/${{env.IMAGE_NAME}}:latest'
 
   
         
