--- a/.github/workflows/build2.yaml
+++ b/.github/workflows/build2.yaml
@@ -10,6 +10,7 @@ env:
 
 jobs:
   build-and-deploy:
+    
     runs-on: ubuntu-latest
     steps:
     # checkout the repo
@@ -31,7 +32,7 @@ jobs:
     - name: "Login Docker Registry"
       uses: azure/docker-login@v1
       with:
-        login-server: '${{ env.REGISTRY_USERNAME }}.azure.cr.io'
+        login-server: ${{ vars.DOCKER_REGISTRY_SERVER_URL }}
         username: ${{ env.REGISTRY_USERNAME }}
         password: ${{ env.REGISTRY_PASSWORD }}
     
@@ -41,17 +42,12 @@ jobs:
     
     - name: 'Build and push image'
       run: |
-        docker build . -t ${{ env.REGISTRY_USERNAME }}.azure.cr.io/${{env.IMAGE_NAME}}:${{ steps.image-version.outputs.version }}
-        docker build . -t ${{ env.REGISTRY_USERNAME }}.azure.cr.io/${{env.IMAGE_NAME}}:latest
-        docker push ${{ env.REGISTRY_USERNAME }}.azure.cr.io/${{env.IMAGE_NAME}}:${{ steps.image-version.outputs.version }}
-        docker push ${{ env.REGISTRY_USERNAME }}.azure.cr.io/${{env.IMAGE_NAME}}:latest
+        docker build . -t ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{env.IMAGE_NAME}}:${{ steps.image-version.outputs.version }}
+        docker build . -t ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{env.IMAGE_NAME}}:latest
+        docker push ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{env.IMAGE_NAME}}:${{ steps.image-version.outputs.version }}
+        docker push ${{ vars.DOCKER_REGISTRY_SERVER_URL }}/${{env.IMAGE_NAME}}:latest
 
     - uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.WEB_APP_NAME }}
-        images: '${{ env.REGISTRY_USERNAME }}.azure.cr.io/${{env.IMAGE_NAME}}:latest'
-
-  
-        
-
-        
+        images: '${{vars.DOCKER_REGISTRY_SERVER_URL}}/${{env.IMAGE_NAME}}:latest'
